# octo-rotary-phone

./: .gitignore  Dockerfile  README.md  output.json  pyproject.toml
function/: requirements.txt
pipeline/: __init__.py
scripts/: build_container.sh  build_container_gcp.sh  deploy_gcp.sh  deploy_lambda.py  get_targets.py  main.ipynb  run_test.sh  setup_gcs.sh
src/: main.py  pipeline.py
src/pipeline/: __init__.py
src/pipeline/popular/: __init__.py
test/: main.py
